Fix fdo#70220 Superscript not imported from pptx.

Import works now, though EditEngine still fscks up font scaling -
seems for CharEscapementHeight to work, there has to be reference,
non-scaled text in the same portion ...

Change-Id: I5505ae83bd6b700ebe8c3465beec40a4df2efb78